fix cards-group qffichage on mobile

--- a/assets/css/components/cards-group.scss
+++ b/assets/css/components/cards-group.scss
@@ -22,6 +22,13 @@
             width: 100%;
             margin: 1em 0;
             border-radius: 0;
+
+            .card-imgs-container {
+                a {
+                    width: 8em;
+                    height: 8em;
+                }
+            }
         }
     }
 }
